--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
     "rollup-plugin-terser": "^6.1.0",
     "rollup-plugin-typescript2": "^0.27.1",
     "ts-jest": "^26.1.4",
-    "typescript": "4.0.0-dev.20200728"
+    "typescript": "^4.0.0-dev.20200728"
   }
 }
