--- a/package.json
+++ b/package.json
@@ -35,16 +35,16 @@
   },
   "homepage": "https://github.com/d8corp/watch-state",
   "devDependencies": {
-    "@types/jest": "^26.0.7",
-    "jest": "^26.1.0",
+    "@types/jest": "^26.0.15",
+    "jest": "^26.6.1",
     "core-js": "^3.6.5",
     "minimist": ">=0.2.1",
-    "mobx": "^5.15.4",
+    "mobx": "^5.15.7",
     "rimraf": "^3.0.2",
-    "rollup": "^2.23.0",
-    "rollup-plugin-terser": "^6.1.0",
-    "rollup-plugin-typescript2": "^0.27.1",
-    "ts-jest": "^26.1.4",
-    "typescript": "^4.0.0-dev.20200728"
+    "rollup": "^2.32.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.28.0",
+    "ts-jest": "^26.4.3",
+    "typescript": "^4.0.5"
   }
 }
