--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "watch-state",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "The simplest watcher for your state",
   "main": "index.js",
   "module": "index.es6.js",
+  "jsnext:main": "index.es6.js",
+  "types": "index.d.ts",
   "private": true,
   "scripts": {
     "build": "bin/release -rollup",
@@ -36,8 +38,8 @@
   "homepage": "https://github.com/d8corp/watch-state",
   "devDependencies": {
     "@types/jest": "^26.0.15",
-    "jest": "^26.6.1",
     "core-js": "^3.6.5",
+    "jest": "^26.6.1",
     "minimist": ">=0.2.1",
     "mobx": "^5.15.7",
     "rimraf": "^3.0.2",
