--- a/package.json
+++ b/package.json
@@ -39,13 +39,12 @@
   },
   "homepage": "https://github.com/d8corp/watch-state",
   "devDependencies": {
-    "@types/colors": "^1.2.1",
     "@types/jest": "^26.0.15",
-    "colors": "^1.4.0",
     "core-js": "^3.6.5",
     "jest": "^26.6.1",
     "minimist": ">=0.2.1",
     "mobx": "^5.15.7",
+    "perfocode": "^1.0.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.32.1",
     "rollup-plugin-terser": "^7.0.2",
