--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "build": "bin/release -rollup",
     "test": "jest",
-    "speed:test": "node speed-test.js",
-    "speed:update": "rollup -c rollup.speed.config.js",
+    "speed": "ts-node speed-test.ts",
     "patch": "bin/release -patch -rollup",
     "minor": "bin/release -minor -rollup",
     "major": "bin/release -major -rollup"
@@ -40,16 +39,18 @@
   "homepage": "https://github.com/d8corp/watch-state",
   "devDependencies": {
     "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.6",
     "core-js": "^3.6.5",
     "jest": "^26.6.1",
     "minimist": ">=0.2.1",
     "mobx": "^5.15.7",
-    "perfocode": "^1.0.0",
+    "perfocode": "^1.0.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.32.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.28.0",
     "ts-jest": "^26.4.3",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
 }
