--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "minimist": ">=0.2.1",
     "mobx": "^5.15.7",
     "perfocode": "^1.1.1",
+    "redux": "^4.0.5",
     "rimraf": "^3.0.2",
     "rollup": "^2.35.1",
     "rollup-plugin-terser": "^7.0.2",
