--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "watch-state",
-  "version": "2.0.0-migration",
+  "version": "2.0.0",
   "description": "The simplest watcher for your state",
   "main": "index.js",
   "module": "index.es6.js",
