added some tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,12 +1,10 @@
-name: tests
+name: Check tests
 
-on:
-  push:
-    branches: [ master ]
+on: workflow_dispatch
 
 jobs:
-  tests:
-
+  run:
+    name: Check tests
     runs-on: ubuntu-latest
 
     strategy:
