--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "core-js": "^3.12.1",
     "effector": "^21.8.11",
     "gzip-size-cli": "^4.1.0",
+    "innetjs": "^1.2.3",
     "jest": "^26.6.3",
     "mazzard": "^1.0.0-rc-2",
     "minimist": ">=0.2.1",
@@ -46,14 +47,13 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^26.5.6",
-    "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "scripts": {
     "build": "bin/release -rollup",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "speed": "ts-node speed.test.ts",
+    "speed": "innetjs run speed.test.ts",
     "patch": "bin/release -patch -rollup",
     "minor": "bin/release -minor -rollup",
     "major": "bin/release -major -rollup",
