--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "rollup": "^2.48.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
+    "storeon": "^3.1.4",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   },
