--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "front-end"
   ],
   "devDependencies": {
+    "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.0",
     "core-js": "^3.12.1",
     "effector": "^21.8.11",
+    "glob": "^7.1.7",
     "gzip-size-cli": "^4.1.0",
     "innetjs": "^1.2.3",
     "jest": "^26.6.3",
