--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "downlevelIteration": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "experimentalDecorators": true,
+    "experimentalDecorators": false,
     "allowSyntheticDefaultImports": true,
     "strict": false,
     "forceConsistentCasingInFileNames": true,
