--- a/package.json
+++ b/package.json
@@ -30,27 +30,37 @@
     "front-end"
   ],
   "devDependencies": {
-    "@types/glob": "^7.1.3",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^15.6.0",
-    "core-js": "^3.12.1",
-    "effector": "^21.8.11",
-    "glob": "^7.1.7",
-    "gzip-size-cli": "^4.1.0",
-    "innetjs": "^1.2.3",
-    "jest": "^26.6.3",
+    "@rollup/plugin-terser": "^0.4.1",
+    "@types/glob": "^8.1.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.36.0",
+    "@typescript-eslint/parser": "^5.36.0",
+    "core-js": "^3.30.1",
+    "effector": "^22.8.0",
+    "eslint": "^8.21.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-config-standard-jsx": "^11.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "glob": "^10.1.0",
+    "gzip-size-cli": "^5.1.0",
+    "innetjs": "^2.5.3",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "mazzard": "^1.0.0-rc-2",
-    "minimist": ">=0.2.1",
-    "mobx": "^6.3.1",
+    "minimist": "^1.2.8",
+    "mobx": "^6.9.0",
     "perfocode": "^1.1.1",
-    "redux": "^4.1.0",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.48.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "storeon": "^3.1.4",
-    "ts-jest": "^26.5.6",
-    "typescript": "^4.2.4"
+    "redux": "^4.2.1",
+    "rimraf": "^5.0.0",
+    "rollup": "^3.20.2",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "storeon": "^3.1.5",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4"
   },
   "scripts": {
     "build": "bin/release -rollup",
@@ -61,6 +71,8 @@
     "minor": "bin/release -minor -rollup",
     "major": "bin/release -major -rollup",
     "migration": "bin/release -migration -rollup",
-    "size": "gzip-size --raw lib/watch-state.min.js"
+    "size": "gzip-size --raw lib/watch-state.min.js",
+    "lint": "eslint src --ext .ts,.tsx",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix"
   }
 }
