--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jest-environment-jsdom": "^29.5.0",
     "mazzard": "^1.0.0-rc-2",
     "mobx": "^6.9.0",
+    "nanostores": "^1.1.0",
     "perfocode": "^1.1.1",
     "redux": "^4.2.1",
     "storeon": "^3.1.5",
