--- a/package.json
+++ b/package.json
@@ -40,37 +40,37 @@
     "patch": "innetjs patch",
     "minor": "innetjs minor",
     "major": "innetjs major",
-    "lint": "eslint src --ext .ts,.tsx",
-    "lint:fix": "eslint src --ext .ts,.tsx --fix"
+    "lint": "eslint",
+    "lint:fix": "eslint --fix"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@size-limit/preset-small-lib": "^12.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^25.2.3",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
+    "@typescript-eslint/parser": "^8.55.0",
     "core-js": "^3.30.1",
     "effector": "^23.4.4",
-    "eslint": "^8.39.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-config-standard-jsx": "^11.0.0",
-    "eslint-config-standard-with-typescript": "^34.0.1",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.7.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint": "^9.39.2",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jest": "^29.14.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.3.0",
     "innetjs": "^2.5.3",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "mazzard": "^1.0.0-rc-2",
     "mobx": "^6.15.0",
     "nanostores": "^1.1.0",
+    "neostandard": "^0.12.2",
     "perfocode": "^1.1.1",
     "redux": "^5.0.1",
     "size-limit": "^12.0.0",
     "storeon": "^3.1.5",
     "ts-jest": "^29.4.6",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.4"
   },
   "size-limit": [
     {
@@ -79,15 +79,15 @@
       "import": {
         "./release/index.es6.js": "{ State }"
       },
-      "limit": "458 B"
+      "limit": "466 B"
     },
     {
       "name": "List",
       "path": "./release/index.es6.js",
       "import": {
-        "./release/index.es6.js": "{ Watch, State, Cache, onDestroy, createEvent }"
+        "./release/index.es6.js": "{ Watch, State, Compute, createEvent }"
       },
-      "limit": "844 B"
+      "limit": "850 B"
     }
   ]
 }
