--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "test:jest": "jest",
     "test:coverage": "jest --coverage",
     "test:size": "size-limit",
-    "speed": "innetjs run speed.test.ts",
+    "speed": "innetjs run speed.test.ts -c tsconfig.speed.json",
     "release": "innetjs release -p -m",
     "patch": "innetjs patch",
     "minor": "innetjs minor",
@@ -59,7 +59,7 @@
     "eslint-plugin-jest": "^29.14.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.3.0",
-    "innetjs": "^3.0.3",
+    "innetjs": "^3.0.4",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "mazzard": "^1.0.0-rc-2",
