--- a/package.json
+++ b/package.json
@@ -62,12 +62,14 @@
     "innetjs": "^3.0.4",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "jotai": "^2.18.0",
     "mazzard": "^1.0.0-rc-2",
     "mobx": "^6.15.0",
     "nanostores": "^1.1.0",
     "neostandard": "^0.12.2",
-    "perfocode": "^1.1.1",
+    "perfocode": "^1.2.0",
     "redux": "^5.0.1",
+    "reselect": "^5.1.1",
     "size-limit": "^12.0.0",
     "storeon": "^3.1.5",
     "ts-jest": "^29.4.6",
@@ -87,7 +89,7 @@
       "name": "Core",
       "path": "./release/index.es6.js",
       "import": {
-        "./release/index.es6.js": "{ Watch, State, Compute, createEvent }"
+        "./release/index.es6.js": "{ Watch, State, Compute }"
       },
       "limit": "878 B"
     }
